Bug 164847 - Clicking the concordance file button in the ToC dialog shows 'Edit...' command
Summary: Clicking the concordance file button in the ToC dialog shows 'Edit...' command
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0
Keywords: needUITest
Depends on:
Blocks: Concordance-File
  Show dependency treegraph
 
Reported: 2025-01-25 00:24 UTC by Andreas Heinisch
Modified: 2025-01-25 10:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2025-01-25 00:24:05 UTC
Description:
Clicking the concordance file button in the ToC dialog shows 'Edit...' command even tough there is no concordance file to edit.

Steps to Reproduce:
1. Open Writer
2. Insert -> Table of Contents and Index -> Table of Contents, Index or Bibliography
3. In the "Type" tab, change the type to "Alphabetical index"
4. Click the "concordance file" checkbox
5. Open the "File" menu

Actual Results:
Edit entry is not disabled although there is no concordance file to edit

Expected Results:
Edit entry should be disabled until there is no concordance file to edit


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ba9048a7d87e9aef9621c864b25de817f3b7ee5f
CPU threads: 32; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2025-01-25 10:42:05 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/287941a6cdff79bfacf508e29977efdf00e479c6

tdf#164847 - Update menu items based on concordance file selection

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.