tdf#164847 - Update menu items based on concordance file selection

Disable/enable the 'Edit' menu option based on the presence of a
concordance file during the creation of an alphabetical index.

Change-Id: I0a12ee21d32975b7f7962d6205986724e15145bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180734
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>